--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "prepublish": "babel -Dd build src"
+    "build": "babel -Dd build src",
+    "watch": "nodemon -w src -x npm run build",
+    "prepublish": "npm run build"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +14,7 @@
   "preferGlobal": true,
   "devDependencies": {
     "babel-cli": "^6.10.1",
-    "babel-preset-es2015": "^6.9.0"
+    "babel-preset-es2015": "^6.9.0",
+    "nodemon": "^1.9.2"
   }
 }
