--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "workbench",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "cli": "build/cli.js",
   "scripts": {
     "build": "babel -Dd build src",
     "watch": "nodemon -w src -x npm run build",
@@ -16,5 +16,6 @@
     "babel-cli": "^6.10.1",
     "babel-preset-es2015": "^6.9.0",
     "nodemon": "^1.9.2"
-  }
+  },
+  "dependencies": {}
 }
