initial command parsing

--- a/example/.workbenchrc
+++ b/example/.workbenchrc
@@ -2,6 +2,6 @@ module.exports = {
   configVersion: "1",
   repos: [
     "domain-group/fe-co-hello-world#master",
-    "domain-group/fe-co-hello-world#foo"
+    "domain-group/fe-build#master",
   ]
 }
