--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "preferGlobal": true,
   "devDependencies": {
     "babel-cli": "^6.10.1",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-plugin-transform-async-to-generator": "^6.8.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.10.3",
     "nodemon": "^1.9.2"
   },
   "dependencies": {
+    "co": "^4.6.0",
     "cross-spawn": "^4.0.0",
     "fs-extra": "^0.30.0",
     "nodegit": "^0.14.1",
