--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "nodemon": "^1.9.2"
   },
   "dependencies": {
+    "buffered-spawn": "^3.2.0",
     "co": "^4.6.0",
     "cross-spawn": "^4.0.0",
     "fs-extra": "^0.30.0",
     "nodegit": "^0.14.1",
+    "ora": "^0.2.3",
     "yargs": "^4.8.1"
   }
 }
