--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "co": "^4.6.0",
     "cross-spawn": "^4.0.0",
     "fs-extra": "^0.30.0",
+    "lodash": "^4.13.1",
     "nodegit": "^0.14.1",
     "ora": "^0.2.3",
+    "semver": "^5.3.0",
     "yargs": "^4.8.1"
   }
 }
