--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "co": "^4.6.0",
     "cross-spawn": "^4.0.0",
     "fs-extra": "^0.30.0",
+    "glob": "^7.0.5",
     "lodash": "^4.13.1",
     "nodegit": "^0.14.1",
     "ora": "^0.2.3",
