--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "workbench",
   "version": "0.0.1",
   "description": "",
-  "cli": "build/cli.js",
+  "main": "build/cli.js",
+  "bin": {
+    "workbench": "build/cli.js"
+  },
   "scripts": {
     "build": "babel -Dd build src",
     "watch": "nodemon -w src -x npm run build",
@@ -21,11 +24,9 @@
   "dependencies": {
     "buffered-spawn": "^3.2.0",
     "co": "^4.6.0",
-    "cross-spawn": "^4.0.0",
     "fs-extra": "^0.30.0",
     "glob": "^7.0.5",
     "lodash": "^4.13.1",
-    "nodegit": "^0.14.1",
     "ora": "^0.2.3",
     "semver": "^5.3.0",
     "yargs": "^4.8.1"
