--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   },
   "dependencies": {
     "buffered-spawn": "^3.2.0",
+    "chokidar": "^1.6.0",
     "co": "^4.6.0",
     "fs-extra": "^0.30.0",
     "glob": "^7.0.5",
     "lodash": "^4.13.1",
+    "node-notifier": "^4.6.0",
     "ora": "^0.2.3",
     "semver": "^5.3.0",
     "yargs": "^4.8.1"
